--- a/pom.xml
+++ b/pom.xml
@@ -236,8 +236,11 @@
                     <version>4.1</version>
                 </dependency>
         -->
-
-
+        <dependency>
+            <groupId>io.socket</groupId>
+            <artifactId>socket.io-client</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
