--- a/cloud/conf/config.ini
+++ b/cloud/conf/config.ini
@@ -73,3 +73,6 @@ logHeartBeatSession=0
 clientInOneFile=1
 logErrorToDatabase=0
 logRequesResponse=1
+
+[uav]
+uavNames=firefly1,firefly2,firefly3,firefly4,firefly5,firefly6,firefly7,firefly8,firefly9,firefly10
